@@ -2,6 +2,7 @@ Revision history for Perl extension AnyEvent.
 
 	- document the first parameter passed to condvar callbacks to be
           the callback.
+        - add AnyEvent::Socket::{ntoa,aton} aliases.
 
 4.22 Sun Jul 20 16:34:13 CEST 2008
 	- new function AnyEvent::Socket::parse_hostport.
